2000-06-26  Chema Celorio  <chema@celorio.com>

	* plugin.c (gedit_plugin_save_settings): save the plugins that are installed

	* prefs.c (gedit_prefs_save_settings): call gedit_plugin_save_settings

2000-06-26  Chema Celorio  <chema@celorio.com>

	* dialogs/dialog-plugins.c (gedit_plugin_manager_create): new function
	(gedit_plugin_manager_clicked): new func
	(gedit_plugin_manager_destroy): new func
	(gedit_plugin_manager_item_remove_all): new func
	(gedit_plugin_manager_item_add_all): 
	(gedit_plugin_manager_item_remove): 
	(gedit_plugin_manager_item_add): 
	(gedit_plugin_manager_item_load): 
	(gedit_plugin_clist_compare_function): 
	(gedit_plugin_lists_freeze): 
	(gedit_plugin_lists_thaw): 

	* plugin.c (gedit_plugins_menu_add): plugin manager stuff
	* plugin.h: ditto

2000-06-25  Chema Celorio  <chema@celorio.com>

	* window.c (gedit_window_set_widgets_sensitivity): set sensitity of
	the plugins menu items.

	* plugin.h (struct _PluginData): add menu_item and
	needs_a_document.

2000-06-25  Chema Celorio  <chema@celorio.com>

	* utils.c (gedit_utils_error_dialog): new function
	(gedit_utils_delete_temp): new function [unfinished]
	(gedit_utils_create_temp_from_doc): new function

2000-06-22  Chema Celorio  <chema@celorio.com>

	* view.c (gedit_view_get_position): fix a bug in which the text
	position will not get updated in the text widget when the position
	is changed with the mouse.

2000-06-22  Chema Celorio  <chema@celorio.com>

	* plugin.c (gedit_plugin_program_location_get): clean g_prints
	* dialogs/dialog-plugins.c: ditto

2000-06-21  Chema Celorio  <chema@celorio.com>

	* utils.h: remove the defines used for accesing the toolbar/menus.

	* view.c (gedit_view_load_widgets): call gnome_mdi_get[menubar/toolbar]
	to get the menu/tooblar UI_INFO
	* window.c (gedit_window_set_widgets_sensitivity): ditto

2000-06-21  Chema Celorio  <chema@celorio.com>

	* search.c (gedit_search_replace_all_execute): add sanity check
