@@ -1,3 +1,9 @@
+2000-06-27  Chema Celorio  <chema@celorio.com>
+
+	* view.c (gedit_view_load_widgets): fix a ugly piece of code.
+
+	* window.c (gedit_window_set_view_menu_sensitivity): new function.
+
 2000-06-26  Chema Celorio  <chema@celorio.com>
 
 	* plugin.c (gedit_plugin_save_settings): save the plugins that are installed
